--- a/views/front/arama.ejs
+++ b/views/front/arama.ejs
@@ -25,6 +25,18 @@
         </div>
         <div id="sozluk" style="padding-left:10px; padding-right: 10px;">
             <ul class="space-y-6">
+                <div class="flex justify-between relative md:mb-4 mb-3" style="margin-top: -5px;">
+                    <img src="https://i.sozcu.com.tr/wp-content/uploads/2017/02/sozcu-boeing-777-1.jpg" style=" height: 120px; width: 130; object-fit: cover;">
+                    <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 120px; width: 130; object-fit: cover;">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/1200px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg" style="height: 120px; width: 130; object-fit: cover;">
+                    <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 120px; width: 130; object-fit: cover;">
+                </div>
+                <div class="flex justify-between relative md:mb-4 mb-3" style="margin-top: -5px;">
+                    <img src="https://i.sozcu.com.tr/wp-content/uploads/2017/02/sozcu-boeing-777-1.jpg" style=" height: 120px; width: 130; object-fit: cover;">
+                    <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 120px; width: 130; object-fit: cover;">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/1200px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg" style="height: 120px; width: 130; object-fit: cover;">
+                    <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 120px; width: 130; object-fit: cover;">
+                </div>
                 <% sozluk.forEach(element=> { %>
                     <li style="margin-top: 4px;">
                         <div class="flex items-start pl-3 space-x-4" style="margin-left: -2vw;">
@@ -49,7 +61,36 @@
             </ul>
     </div>
     <div id="medya" style="display: none; padding-left:10px;">
-        Medya
+        <div class="flex justify-between relative md:mb-4 mb-3" style="margin-top: -5px;">
+            <img src="https://i.sozcu.com.tr/wp-content/uploads/2017/02/sozcu-boeing-777-1.jpg" style=" height: 120px; width: 130; object-fit: cover;">
+            <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 120px; width: 130; object-fit: cover;">
+            <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 120px; width: 130; object-fit: cover;">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/1200px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg" style="height: 120px; width: 130; object-fit: cover;">
+        </div>
+        <div class="flex justify-between relative md:mb-4 mb-3" style="margin-top: -5px;">
+            <img src="https://i.sozcu.com.tr/wp-content/uploads/2017/02/sozcu-boeing-777-1.jpg" style=" height: 120px; width: 130; object-fit: cover;">
+            <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 120px; width: 130; object-fit: cover;">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/1200px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg" style="height: 120px; width: 130; object-fit: cover;">
+            <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 120px; width: 130; object-fit: cover;">
+        </div>
+        <div class="flex justify-between relative md:mb-4 mb-3" style="margin-top: -5px;">
+            <img src="https://i.sozcu.com.tr/wp-content/uploads/2017/02/sozcu-boeing-777-1.jpg" style=" height: 120px; width: 130; object-fit: cover;">
+            <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 120px; width: 130; object-fit: cover;">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/1200px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg" style="height: 120px; width: 130; object-fit: cover;">
+            <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 120px; width: 130; object-fit: cover;">
+        </div>
+        <div class="flex justify-between relative md:mb-4 mb-3" style="margin-top: -5px;">
+            <img src="https://i.sozcu.com.tr/wp-content/uploads/2017/02/sozcu-boeing-777-1.jpg" style=" height: 120px; width: 130; object-fit: cover;">
+            <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 120px; width: 130; object-fit: cover;">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/1200px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg" style="height: 120px; width: 130; object-fit: cover;">
+            <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 120px; width: 130; object-fit: cover;">
+        </div>
+        <div class="flex justify-between relative md:mb-4 mb-3" style="margin-top: -5px;">
+            <img src="https://i.sozcu.com.tr/wp-content/uploads/2017/02/sozcu-boeing-777-1.jpg" style=" height: 120px; width: 130; object-fit: cover;">
+            <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 120px; width: 130; object-fit: cover;">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/1200px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg" style="height: 120px; width: 130; object-fit: cover;">
+            <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 120px; width: 130; object-fit: cover;">
+        </div>
     </div>
     <div id="kisiler" style="display: none; padding-left:10px;">
         <table>
