--- a/views/front/arama.ejs
+++ b/views/front/arama.ejs
@@ -26,16 +26,16 @@
         <div id="sozluk" style="padding-left:10px; padding-right: 10px;">
             <ul class="space-y-6">
                 <div class="flex justify-between relative md:mb-4 mb-3" style="margin-top: -5px;">
-                    <img src="https://i.sozcu.com.tr/wp-content/uploads/2017/02/sozcu-boeing-777-1.jpg" style=" height: 120px; width: 130; object-fit: cover;">
-                    <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 120px; width: 130; object-fit: cover;">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/1200px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg" style="height: 120px; width: 130; object-fit: cover;">
-                    <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 120px; width: 130; object-fit: cover;">
+                    <img src="https://i.sozcu.com.tr/wp-content/uploads/2017/02/sozcu-boeing-777-1.jpg" style=" height: 20vw; width: 130; object-fit: cover;">
+                    <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 20vw; width: 130; object-fit: cover;">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/1200px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg" style="height: 20vw; width: 130; object-fit: cover;">
+                    <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 20vw; width: 130; object-fit: cover;">
                 </div>
                 <div class="flex justify-between relative md:mb-4 mb-3" style="margin-top: -5px;">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/1200px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg" style="height: 120px; width: 130; object-fit: cover;">
-                    <img src="https://i.sozcu.com.tr/wp-content/uploads/2017/02/sozcu-boeing-777-1.jpg" style=" height: 120px; width: 130; object-fit: cover;">
-                    <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 120px; width: 130; object-fit: cover;">
-                    <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 120px; width: 130; object-fit: cover;">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/1200px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg" style="height: 20vw; width: 130; object-fit: cover;">
+                    <img src="https://i.sozcu.com.tr/wp-content/uploads/2017/02/sozcu-boeing-777-1.jpg" style=" height: 20vw; width: 130; object-fit: cover;">
+                    <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 20vw; width: 130; object-fit: cover;">
+                    <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 20vw; width: 130; object-fit: cover;">
                 </div>
                 <% sozluk.forEach(element=> { %>
                     <li style="margin-top: 4px;">
@@ -60,36 +60,24 @@
         <% }) %>
             </ul>
     </div>
-    <div id="medya" style="display: none; padding-left:10px;">
-        <div class="flex justify-between relative md:mb-4 mb-3" style="margin-top: -5px;">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/1200px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg" style="height: 120px; width: 130; object-fit: cover;">
-            <img src="https://i.sozcu.com.tr/wp-content/uploads/2017/02/sozcu-boeing-777-1.jpg" style=" height: 120px; width: 130; object-fit: cover;">
-            <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 120px; width: 130; object-fit: cover;">
-            <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 120px; width: 130; object-fit: cover;">
+    <div id="medya" style="display: none; padding-left:5px;">
+        <div class="flex relative" style="margin-top: 5px;">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/1200px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg" style="max-height:20vw; min-height:20vw; height: 20vw; max-width:20vw; min-width:20vw; width: 20vw; object-fit: cover; margin-left: 4vw;">
+            <img src="https://i.sozcu.com.tr/wp-content/uploads/2017/02/sozcu-boeing-777-1.jpg" style="max-height:20vw; min-height:20vw; height: 20vw; max-width:20vw; min-width:20vw; width: 20vw; object-fit: cover; margin-left: 4vw;">
+            <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style="max-height:20vw; min-height:20vw; height: 20vw; max-width:20vw; min-width:20vw; width: 20vw; object-fit: cover; margin-left: 4vw;">
+            <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style="max-height:20vw; min-height:20vw; height: 20vw; max-width:20vw; min-width:20vw; width: 20vw; object-fit: cover; margin-left: 4vw;">
         </div>
-        <div class="flex justify-between relative md:mb-4 mb-3" style="margin-top: -5px;">
-            <img src="https://i.sozcu.com.tr/wp-content/uploads/2017/02/sozcu-boeing-777-1.jpg" style=" height: 120px; width: 130; object-fit: cover;">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/1200px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg" style="height: 120px; width: 130; object-fit: cover;">
-            <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 120px; width: 130; object-fit: cover;">
-            <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 120px; width: 130; object-fit: cover;">
+        <div class="flex relative" style="margin-top: 5px;">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/1200px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg" style="max-height:20vw; min-height:20vw; height: 20vw; max-width:20vw; min-width:20vw; width: 20vw; object-fit: cover; margin-left: 4vw;">
+            <img src="https://i.sozcu.com.tr/wp-content/uploads/2017/02/sozcu-boeing-777-1.jpg" style="max-height:20vw; min-height:20vw; height: 20vw; max-width:20vw; min-width:20vw; width: 20vw; object-fit: cover; margin-left: 4vw;">
+            <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style="max-height:20vw; min-height:20vw; height: 20vw; max-width:20vw; min-width:20vw; width: 20vw; object-fit: cover; margin-left: 4vw;">
+            <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style="max-height:20vw; min-height:20vw; height: 20vw; max-width:20vw; min-width:20vw; width: 20vw; object-fit: cover; margin-left: 4vw;">
         </div>
-        <div class="flex justify-between relative md:mb-4 mb-3" style="margin-top: -5px;">
-            <img src="https://i.sozcu.com.tr/wp-content/uploads/2017/02/sozcu-boeing-777-1.jpg" style=" height: 120px; width: 130; object-fit: cover;">
-            <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 120px; width: 130; object-fit: cover;">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/1200px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg" style="height: 120px; width: 130; object-fit: cover;">
-            <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 120px; width: 130; object-fit: cover;">
-        </div>
-        <div class="flex justify-between relative md:mb-4 mb-3" style="margin-top: -5px;">
-            <img src="https://i.sozcu.com.tr/wp-content/uploads/2017/02/sozcu-boeing-777-1.jpg" style=" height: 120px; width: 130; object-fit: cover;">
-            <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 120px; width: 130; object-fit: cover;">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/1200px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg" style="height: 120px; width: 130; object-fit: cover;">
-            <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 120px; width: 130; object-fit: cover;">
-        </div>
-        <div class="flex justify-between relative md:mb-4 mb-3" style="margin-top: -5px;">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/1200px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg" style="height: 120px; width: 130; object-fit: cover;">
-            <img src="https://i.sozcu.com.tr/wp-content/uploads/2017/02/sozcu-boeing-777-1.jpg" style=" height: 120px; width: 130; object-fit: cover;">
-            <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 120px; width: 130; object-fit: cover;">
-            <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style=" height: 120px; width: 130; object-fit: cover;">
+        <div class="flex relative" style="margin-top: 5px;">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/1200px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg" style="max-height:20vw; min-height:20vw; height: 20vw; max-width:20vw; min-width:20vw; width: 20vw; object-fit: cover; margin-left: 4vw;">
+            <img src="https://i.sozcu.com.tr/wp-content/uploads/2017/02/sozcu-boeing-777-1.jpg" style="max-height:20vw; min-height:20vw; height: 20vw; max-width:20vw; min-width:20vw; width: 20vw; object-fit: cover; margin-left: 4vw;">
+            <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style="max-height:20vw; min-height:20vw; height: 20vw; max-width:20vw; min-width:20vw; width: 20vw; object-fit: cover; margin-left: 4vw;">
+            <img src="https://i.pinimg.com/736x/26/6f/f5/266ff5ae2c8fc6c5a638df9f86b4bb81.jpg" style="max-height:20vw; min-height:20vw; height: 20vw; max-width:20vw; min-width:20vw; width: 20vw; object-fit: cover; margin-left: 4vw;">
         </div>
     </div>
     <div id="kisiler" style="display: none; padding-left:10px;">
