--- a/views/front/auth/reg.ejs
+++ b/views/front/auth/reg.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="colorlib.com">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sign Up Form</title>
+    <title>Panipal Kayıt</title>
 
     <!-- Font Icon -->
     <link rel="stylesheet" href="../../../login/fonts/material-icon/css/material-design-iconic-font.min.css">
@@ -29,7 +29,7 @@
                 </h3>
                 <fieldset>
                     <div class="form-row">
-                        <div class="form-file">
+                        <div class="form-file" id="demo">
                             <input type="file" class="inputfile" name="your_picture" id="your_picture"
                                 onchange="readURL(this);" data-multiple-caption="{count} files selected" multiple />
                             <label for="your_picture">
