--- a/views/front/arama.ejs
+++ b/views/front/arama.ejs
@@ -96,7 +96,7 @@
                 background-color: #FFCDD2;
                 border: 1px solid #C62828;
                 color: #B71C1C;
-                text-decoration: none;">ABONE OL</span>
+                text-decoration: none;">KATIL</span>
             </h3>
                 </td>
             </tr>
