--- a/views/front/auth/myprofile.ejs
+++ b/views/front/auth/myprofile.ejs
@@ -22,7 +22,7 @@
                                 <td style="width: 70vw;">
                                     <h3 @click="mesajEkle('<%= kisi._id %>')" class="text-lg font-semibold" style=" text-align: right;"> <ion-icon
                                             style="margin-top: -2px;" class="text-2xl" name="chatbubble-outline">
-                                        </ion-icon> | <span style="color: crimson;">ABONE OL</span>
+                                        </ion-icon> | <span style="color: crimson;">KATIL</span>
                                     </h3>
                                 </td>
                             </tr>
