--- a/views/front/sozluk/single.ejs
+++ b/views/front/sozluk/single.ejs
@@ -119,10 +119,10 @@
                                                     </td> -->
                                                     <td>
                                                         <div class="flex items-center"
-                                                            @click="begen('<%= element._id %>')">
+                                                            @click="sayi++">
                                                             <ion-icon id="<%= element._id %>"
                                                                 class="text-2xl" name="heart-outline"></ion-icon>
-                                                            <span class="text-sm"></span>
+                                                            <span class="text-md"> {{sayi}} </span>
                                                         </div>
                                                     </td>
                                                     <td>
