--- a/views/front/sozluk/single.ejs
+++ b/views/front/sozluk/single.ejs
@@ -94,7 +94,7 @@
                                             <%= element.yorum %> <small> <a onclick="geriAl('<%=element._id%>')">Geri
                                                         al</a> </small>
                                         </p>
-                                         <div class="row" style="margin-left: 2vw; margin-top: 7px;">
+                                         <div class="row" style="margin-left: -8px; margin-top: 7px;">
                                             <table>
                                                 <tr>
                                                     <!-- <td>
