--- a/views/front/sozluk/single.ejs
+++ b/views/front/sozluk/single.ejs
@@ -61,7 +61,7 @@
                                                 
                                     </div>
                                     <div style="flex:12; margin-left: -8px;">
-                                        <span style="margin-top: 20px;"><b>Abdullah Bektaş</b></span><br>
+                                        <span style="margin-top: 20px;"><b><%= element.isim %></b></span><br>
                                         <span style="margin-top: 20px;"><b><small><%= moment(element.createdAt,"ddd MMM DD YYYY HH:mm:ss GMT Z'").fromNow(true) %> önce</small></b></span>
                                     </div>
                                     <div style="flex:4">
@@ -195,10 +195,14 @@
                         class="bg-gray-200 border border-white rounded-full w-11 h-11">
                     <div class="flex-1 pt-2">
                         <input type="hidden" id="sid" value="<%= konu._id %>">
+                    <input type="text" id="input" class="form-control" placeholder="İsim">
+
                         <textarea v-model="yorum"
                             class="uk-textare text-black shadow-none focus:shadow-none text-xl font-medium resize-none"
                             rows="5" placeholder="Eklemek istediğiniz içeriği giriniz."></textarea>
                     </div>
+                    
+                    
 
                 </div>
                 <div class="bsolute bottom-0 p-4 space-x-4 w-full">
